# XpSohijackDemo

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/chcd/xpsohijackdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: xposed_init
app/src/main/java/com/chcd/xpsohijackdemo/: MainActivity.java  XpHookModule.java
app/src/main/jni/: addHello.cpp
app/src/main/jni/inlineHook/: inlineHook.c  main.cpp  relocate.c
app/src/main/jni/inlineHook/include/: log.h
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/chcd/xpsohijackdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
